# derive_pattern

./: Cargo.toml
derive_pattern/: Cargo.toml
derive_pattern/src/: lib.rs
derive_pattern_test_cases/: Cargo.toml
derive_pattern_test_cases/src/: lib.rs
